--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,8 @@
 }
 
 html {
-  overflow-x: hidden;
+  max-width: 100svw;
+  max-height: 100svh;
 }
 
 * {
